Style question popup

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 			</nav>
 			
 			<section class="main">
-				<header>
+				<!-- <header class="intro-text">
 					<h1>Join Our Contest</h1>
 					<article>
 						Show us your knowledge about finances and have a great chance to win valuable prizes
@@ -36,9 +36,28 @@
 			
 				<a href="#question-1" class="btn btn-primary btn-lg">
 					Start now &raquo;
-				</a>
+				</a> -->
 
 				<!-- Question popups -->
+				<div class="question-popup">
+					<header>
+						<h2 class="question-name">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto sit, molestias sint ducimus a totam ea officia est doloremque laboriosam.</h2>
+						<span class="question-count">1/5</span>
+					</header>
+					<section class="answers-list">
+						<ul>
+							<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, impedit.</li>
+							<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, at!</li>
+							<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus.</li>
+							<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, aliquam.</li>
+						</ul>
+					</section>
+
+					<footer>
+						<a class="btn btn-primary go-prev-question" href="#question-1">Go back</a>
+						<a class="btn btn-primary go-next-question" href="#question-2">Proceed</a>
+					</footer>
+				</div>
 			</section>
 			
 			<footer class="footer">
