Split styles, add views: questions, form, popup

--- a/app/popup.html
+++ b/app/popup.html
@@ -47,7 +47,14 @@
 					</ul>
 				</nav>
 			</footer>
-			
+		</div>
+
+		<div class="popup-overlay opened">
+			<div class="popup opened">
+				<h2>Lorem ipsum dolor sit amet.</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium numquam, veniam eos nobis at blanditiis.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi consectetur aliquid, excepturi aspernatur, libero porro ipsa omnis iusto autem harum molestias, ipsum dicta. Iure laudantium autem, doloremque soluta nemo laboriosam.</p>
+			</div>
 		</div>
 
 		<!-- build:js scripts/bundle.js -->
