--- a/app/form.html
+++ b/app/form.html
@@ -27,18 +27,19 @@
 			</nav>
 			
 			<section class="main">
-				<header class="intro-text">
-					<h1>Join Our Contest</h1>
-					<article>
-						Show us your knowledge about finances and have a great chance to win valuable prizes
-					</article>
-				</header>
-			
-				<a href="#question-1" class="btn btn-primary btn-lg">
-					Start now &raquo;
-				</a>
+				<div class="question-box">
+					<header>
+						<h2 class="question-name">Fill your informations</h2>
+						<span class="question-count">5/5</span>
+					</header>
+					<form>
+						<p><input class="half-size" type="text" name="" placeholder="Your name"><input class="half-size" type="text" name="" placeholder="Your last name"></p>
+						<p><input class="half-size" type="text" name="" placeholder="Email"><input class="half-size" type="text" name="" placeholder="Your phone number"></p>
+						<p><textarea placeholder="In few words, write about..."></textarea></p>
+						<a href="#" class="btn btn-primary btn-lg btn-submit">Submit</a>
+					</form>
+				</div>
 			</section>
-			
 			<footer class="footer">
 				<nav>
 					<ul>
@@ -47,7 +48,7 @@
 					</ul>
 				</nav>
 			</footer>
-			
+
 		</div>
 
 		<!-- build:js scripts/bundle.js -->
