--- a/app/questions.html
+++ b/app/questions.html
@@ -27,16 +27,25 @@
 			</nav>
 			
 			<section class="main">
-				<header class="intro-text">
-					<h1>Join Our Contest</h1>
-					<article>
-						Show us your knowledge about finances and have a great chance to win valuable prizes
-					</article>
-				</header>
-			
-				<a href="#question-1" class="btn btn-primary btn-lg">
-					Start now &raquo;
-				</a>
+				<div class="question-box">
+					<header>
+						<h2 class="question-name">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto sit, molestias sint ducimus a totam ea officia est doloremque laboriosam.</h2>
+						<span class="question-count">1/5</span>
+					</header>
+					<section class="answers-list">
+						<ul>
+							<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, impedit.</li>
+							<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, at!</li>
+							<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus.</li>
+							<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, aliquam.</li>
+						</ul>
+					</section>
+
+					<footer>
+						<a class="btn btn-primary go-prev-question" href="#question-1">Go back</a>
+						<a class="btn btn-primary go-next-question" href="#question-2">Next question</a>
+					</footer>
+				</div>
 			</section>
 			
 			<footer class="footer">
@@ -47,7 +56,7 @@
 					</ul>
 				</nav>
 			</footer>
-			
+
 		</div>
 
 		<!-- build:js scripts/bundle.js -->
