Improve things, add popup close and single article

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
 		<div class="wrapper">
 			<nav class="menu">
 				<ul>
+					<li><a href="#/">Start</a></li>
 					<li><a href="#prizes">Prizes</a></li>
 					<li><a href="#rules">Rules</a></li>
 					<li><a href="#help">Help</a></li>
