--- a/app/popup.html
+++ b/app/popup.html
@@ -51,6 +51,7 @@
 
 		<div class="popup-overlay opened">
 			<div class="popup opened">
+				<span class="close">x</span>
 				<h2>Lorem ipsum dolor sit amet.</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium numquam, veniam eos nobis at blanditiis.</p>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi consectetur aliquid, excepturi aspernatur, libero porro ipsa omnis iusto autem harum molestias, ipsum dicta. Iure laudantium autem, doloremque soluta nemo laboriosam.</p>
