Add jQuery, prepare routing and some views

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 		<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300' rel='stylesheet' type='text/css'>
 
 		<!-- build:css styles/main.css -->
-		<link rel="stylesheet" href="../node_modules/normalize.css/normalize.css">
+		<link rel="stylesheet" href="/node_modules/normalize.css/normalize.css">
 		<link rel="stylesheet" href="styles/main.css">
 		<!-- endbuild -->
 	</head>
@@ -20,25 +20,14 @@
 		<div class="wrapper">
 			<nav class="menu">
 				<ul>
-					<li><a href="#/">Start</a></li>
-					<li><a href="#prizes">Prizes</a></li>
-					<li><a href="#rules">Rules</a></li>
-					<li><a href="#help">Help</a></li>
+					<li><a href="/">Start</a></li>
+					<li><a href="prizes">Prizes</a></li>
+					<li><a href="rules">Rules</a></li>
+					<li><a href="help">Help</a></li>
 				</ul>	
 			</nav>
 			
-			<section class="main">
-				<header class="intro-text">
-					<h1>Join Our Contest</h1>
-					<article>
-						Show us your knowledge about finances and have a great chance to win valuable prizes
-					</article>
-				</header>
-			
-				<a href="#question-1" class="btn btn-primary btn-lg">
-					Start now &raquo;
-				</a>
-			</section>
+			<section class="view"></section>
 			
 			<footer class="footer">
 				<nav>
@@ -50,6 +39,9 @@
 			</footer>
 			
 		</div>
+
+		<!-- Libs -->
+		<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 
 		<!-- build:js scripts/bundle.js -->
 		<script src="scripts/bundle.js"></script>
