--- a/app/index.html
+++ b/app/index.html
@@ -21,9 +21,9 @@
 			<nav class="menu">
 				<ul>
 					<li><a href="/">Start</a></li>
-					<li><a href="prizes">Prizes</a></li>
-					<li><a href="rules">Rules</a></li>
-					<li><a href="help">Help</a></li>
+					<li><a href="/prizes">Prizes</a></li>
+					<li><a href="/rules">Rules</a></li>
+					<li><a href="/help">Help</a></li>
 				</ul>	
 			</nav>
 			
@@ -32,12 +32,19 @@
 			<footer class="footer">
 				<nav>
 					<ul>
-						<li><a href="#about">About us</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="/about">About us</a></li>
+						<li><a href="/contact">Contact</a></li>
 					</ul>
 				</nav>
 			</footer>
-			
+		</div>
+
+		<!-- Popup -->
+		<div class="popup-overlay">
+			<div class="popup">
+				<span class="close">x</span>
+				<div class="popup-content"></div>
+			</div>
 		</div>
 
 		<!-- Libs -->
