Implement transition between views and on popups

--- a/app/index.html
+++ b/app/index.html
@@ -40,8 +40,8 @@
 		</div>
 
 		<!-- Popup -->
-		<div class="popup-overlay">
-			<div class="popup">
+		<div class="popup-overlay visuallyhidden">
+			<div class="popup visuallyhidden">
 				<span class="close">x</span>
 				<div class="popup-content"></div>
 			</div>
